# chronicle

./: Cargo.toml  README.md  architecture_starter.md  bug_tracking.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/controller/: Cargo.toml
crates/controller/benches/: state_machine.rs
crates/controller/src/: controller.rs  grpc_service.rs  lib.rs  log_store.rs  network.rs  state_machine.rs  types.rs
crates/replication/: Cargo.toml
crates/replication/benches/: replication.rs
crates/replication/src/: assignment.rs  config.rs  follower_fetcher.rs  lib.rs  replica_manager.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  metadata_reactor.rs  service.rs
crates/server/tests/: end_to_end.rs
crates/storage/: Cargo.toml
crates/storage/benches/: storage.rs
crates/storage/src/: config.rs  error.rs  index.rs  lib.rs  log.rs  record.rs  segment.rs  time_index.rs  topic.rs
crates/stream/: Cargo.toml  build.rs
crates/stream/benches/: stream.rs
crates/stream/src/: lib.rs  operator.rs  processor.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md
proto/: chronicle.proto
