[package]
name = "chronicle-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
chronicle-replication = { path = "../replication" }
chronicle-storage = { path = "../storage" }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "state_machine"
harness = false
