[package]
name = "chronicle-replication"
version = "0.1.0"
edition = "2021"

[dependencies]
chronicle-storage = { path = "../storage" }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.12"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
