[package]
name = "chronicle-replication"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
chronicle-storage = { path = "../storage" }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.12"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "replication"
harness = false
