[package]
name = "chronicle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chronicle-storage = { path = "../storage" }
clap = { version = "4", features = ["derive"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
