[package]
name = "chronicle-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
chronicle-controller = { path = "../controller" }
chronicle-replication = { path = "../replication" }
chronicle-storage = { path = "../storage" }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
