[package]
name = "chronicle-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = "0.12"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"
